--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -3,6 +3,14 @@
 ---
 modules-search: [ local ]
 
+instances:
+- id:       default
+  module:   shellprocess
+  config:   netinstall_default.conf
+- id:       keyboard
+  module:   shellprocess
+  config:   netinstall_keyboard.conf
+
 sequence:
 - show:
   - welcome
@@ -19,6 +27,7 @@ sequence:
   - fstab
   - locale
   - keyboard
+  - shellprocess@keyboard
   - localecfg
   - networkcfg
   - luksopenswaphookcfg
@@ -30,7 +39,7 @@ sequence:
   - users
   - hwclock
   # - services-systemd
-  - shellprocess
+  - shellprocess@default
   - displaymanager
   - grubcfg
   - bootloader
