--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -6,10 +6,10 @@ modules-search: [ local ]
 instances:
 - id:       default
   module:   shellprocess
-  config:   netinstall_default.conf
+  config:   shellprocess_default.conf
 - id:       keyboard
   module:   shellprocess
-  config:   netinstall_keyboard.conf
+  config:   shellprocess_keyboard.conf
 
 sequence:
 - show:
