--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -3,13 +3,10 @@
 ---
 modules-search: [ local ]
 
-instances:
-- id:       default
-  module:   shellprocess
-  config:   shellprocess_default.conf
-- id:       keyboard
-  module:   shellprocess
-  config:   shellprocess_keyboard.conf
+# instances:
+# - id:       default
+#   module:   shellprocess
+#   config:   shellprocess_default.conf
 
 sequence:
 - show:
