--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -24,7 +24,6 @@ sequence:
   - fstab
   - locale
   - keyboard
-  - shellprocess@keyboard
   - localecfg
   - networkcfg
   - luksopenswaphookcfg
@@ -36,7 +35,8 @@ sequence:
   - users
   - hwclock
   # - services-systemd
-  - shellprocess@default
+  # - shellprocess@default
+  - shellprocess
   - displaymanager
   - grubcfg
   - bootloader
