--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,48 +1,40 @@
 # Ctlos Calamares
 pkgname=calamares
-pkgver=3.2.1
-pkgrel=1
+pkgver=3.2.30
+pkgrel=8
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
 license=(GPL)
-url="https://github.com/ctlos/ctlos-calamares"
+url="https://github.com/ctlos/calamares"
 license=('LGPL')
-depends=('kconfig'
-         'kcoreaddons'
-         'kiconthemes'
-         'ki18n'
-         'kio'
-         'solid'
-         'squashfs-tools'
-         'yaml-cpp'
-         'kpmcore>=3.3.0'
-         'libpwquality'
-         'mkinitcpio-openswap'
-         'boost-libs'
-         'ckbcomp'
-         'hwinfo'
-         'qt5-svg'
-         'qt5-webkit'
-         'polkit-qt5' 
-         'gtk-update-icon-cache')
 
-makedepends=('extra-cmake-modules'
-             'qt5-tools'
-             'qt5-translations'
-             'git'
-             'boost')
+depends=('kconfig' 'kcoreaddons' 'kiconthemes' 'ki18n' 'kio' 'solid' 'yaml-cpp' 'kpmcore' 'mkinitcpio-openswap'
+         'boost-libs' 'ckbcomp' 'hwinfo' 'qt5-svg' 'polkit-qt5' 'gtk-update-icon-cache' 'plasma-framework'
+         'qt5-xmlpatterns' 'squashfs-tools' 'libpwquality' 'yad' 'gtk-update-icon-cache')
 
+makedepends=('extra-cmake-modules' 'qt5-tools' 'qt5-translations' 'git' 'boost')
+
+conflicts=('calamares')
+backup=('usr/share/calamares/modules/bootloader.conf'
+        'usr/share/calamares/modules/displaymanager.conf'
+        'usr/share/calamares/modules/initcpio.conf'
+        'usr/share/calamares/modules/unpackfs.conf')
 
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
-         git+https://github.com/ctlos/ctlos-calamares#branch=master)
+         git+https://github.com/ctlos/calamares#branch=master)
 
-sha256sums=('a9e76ba46819a1f835119d56fd3827b8f8c7f08f633522bf33aefdc67674211a'
+sha256sums=('SKIP'
             'SKIP')
 
 prepare() {
-    cp -a ${srcdir}/ctlos-calamares/* ${srcdir}/calamares-${pkgver}
-    rm -rf ${srcdir}/ctlos-calamares
+    cp -a ${srcdir}/calamares/* ${srcdir}/calamares-${pkgver}
+    rm -rf ${srcdir}/calamares
     cd ${srcdir}/calamares-${pkgver}
+    sed -i -e 's/"Install configuration files" OFF/"Install configuration files" ON/' CMakeLists.txt
+
+    # change branding
+    sed -i -e "s/default/ctlos/g" src/branding/CMakeLists.txt
+
 }
 
 build() {
@@ -51,25 +43,24 @@ build() {
     mkdir -p build
     cd build
         cmake .. \
-        -DCMAKE_BUILD_TYPE=Release \
-        -DCMAKE_INSTALL_PREFIX=/usr \
-        -DCMAKE_INSTALL_LIBDIR=lib \
-        -DWITH_CRASHREPORTER:BOOL=OFF \
-        -DWITH_PYTHONQT:BOOL=OFF \
-        -DSKIP_MODULES="webview interactiveterminal initramfs \
-                        initramfscfg dracut dracutlukscfg \
-                        dummyprocess dummypython dummycpp \
-                        dummypythonqt plasmalnf"
+              -DCMAKE_BUILD_TYPE=Release \
+              -DCMAKE_INSTALL_PREFIX=/usr \
+              -DCMAKE_INSTALL_LIBDIR=lib \
+              -DWITH_KF5DBus=OFF \
+              -DBoost_NO_BOOST_CMAKE=ON \
+              -DSKIP_MODULES="webview interactiveterminal initramfs \
+                              initramfscfg dracut dracutlukscfg \
+                              dummyprocess dummypython dummycpp \
+                              dummypythonqt services-openrc services-systemd \
+                              keyboardq localeq welcomeq"
         make
 }
 
 package() {
     cd ${srcdir}/calamares-${pkgver}/build
     make DESTDIR="$pkgdir" install
-    install -Dm644 "../calamares.desktop" "$pkgdir/usr/share/applications/calamares.desktop"
-    install -Dm644 "../calamares.png" "$pkgdir/usr/share/icons/calamares.png"
-	install -Dm755 "../data/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
+    install -Dm644 "../data/calamares.desktop" "$pkgdir/usr/share/applications/calamares.desktop"
+    install -Dm755 "../data/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
     install -Dm644 "../data/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
     chmod 750 "$pkgdir"/etc/polkit-1/rules.d
 }
-
