--- a/data/calamares.desktop
+++ b/data/calamares.desktop
@@ -5,7 +5,7 @@ Name=Install Ctlos Linux
 GenericName=Live Installer
 Comment=Install the operating system to disk
 Exec=/usr/bin/calamares_polkit %f
-Icon=/usr/share/icons/calamares.png
+Icon=calamares
 Terminal=false
 StartupNotify=true
 Type=Application
