--- a/src/modules/users/users.conf
+++ b/src/modules/users/users.conf
@@ -2,16 +2,23 @@
 defaultGroups:
     - users
     - lp
+    - power
     - video
     - network
     - storage
     - wheel
     - audio
-    - sambashare
+    - sys
+    - optical
+    - scanner
+    - rfkill
+
 autologinGroup:  autologin
 doAutologin:     false
 sudoersGroup:    wheel
 setRootPassword: true
 doReusePassword: true
-availableShells: /bin/zsh
+userShell: /bin/zsh
 avatarFilePath: ~/.face
+setHostname: EtcFile
+writeHostsFile: true
