--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,19 +1,18 @@
 # Ctlos Calamares
 pkgname=calamares-net
-pkgver=3.2.29
-pkgrel=2
+pkgver=3.2.30
+pkgrel=1
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
 license=(GPL)
 url="https://github.com/ctlos/calamares"
 license=('LGPL')
 
-depends=('boost-libs' 'upower' 'solid' 'doxygen' 'dmidecode' 'gptfdisk' 'hwinfo' 'yaml-cpp'
-         'kservice' 'kwidgetsaddons' 'kpmcore' 'kparts' 'kconfig' 'kcoreaddons' 'kiconthemes' 'ki18n' 'kio'
-         'plasma-framework' 'polkit-qt5' 'qt5-webengine' 'qt5-svg' 'qt5-xmlpatterns'
-         'ckbcomp' 'mkinitcpio-openswap' 'squashfs-tools' 'libpwquality' 'yad' 'gtk-update-icon-cache')
+depends=('kconfig' 'kcoreaddons' 'kiconthemes' 'ki18n' 'kio' 'solid' 'yaml-cpp' 'kpmcore' 'mkinitcpio-openswap'
+         'boost-libs' 'ckbcomp' 'hwinfo' 'qt5-svg' 'polkit-qt5' 'gtk-update-icon-cache' 'plasma-framework'
+         'qt5-xmlpatterns' 'squashfs-tools' 'libpwquality' 'yad' 'gtk-update-icon-cache')
 
-makedepends=('git' 'boost' 'extra-cmake-modules' 'qt5-tools' 'qt5-translations')
+makedepends=('extra-cmake-modules' 'qt5-tools' 'qt5-translations' 'git' 'boost')
 
 conflicts=('calamares')
 backup=('usr/share/calamares/modules/bootloader.conf'
@@ -52,12 +51,12 @@ build() {
               -DCMAKE_INSTALL_PREFIX=/usr \
               -DCMAKE_INSTALL_LIBDIR=lib \
               -DWITH_KF5DBus=OFF \
-              -DWITH_PYTHONQT:BOOL=ON \
               -DBoost_NO_BOOST_CMAKE=ON \
               -DSKIP_MODULES="webview interactiveterminal initramfs \
                               initramfscfg dracut dracutlukscfg \
                               dummyprocess dummypython dummycpp \
-                              dummypythonqt services-openrc services-systemd"
+                              dummypythonqt services-openrc services-systemd \
+                              keyboardq localeq welcomeq"
         make
 }
 
