--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -28,6 +28,7 @@ sequence:
   - networkcfg
   - luksopenswaphookcfg
   - luksbootkeyfile
+  - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
   - packages
