--- a/settings-online.conf
+++ b/settings-online.conf
@@ -38,6 +38,7 @@ sequence:
   - networkcfg
   - luksopenswaphookcfg
   - luksbootkeyfile
+  - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
   - packages
