--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -1,8 +1,9 @@
 ---
 dontChroot: false
-timeout: 10
+timeout: 60
 script:
     - "-/usr/bin/cleaner.sh"
+    - "-su @@USER@@ -c 'xdg-user-dirs-gtk-update --force'"
     # - "-touch @@ROOT@@/tmp/thingy"
     # - "/usr/bin/false"
     # - command: "/usr/local/bin/slowloris"
