--- a/src/modules/welcome/welcome-online.conf
+++ b/src/modules/welcome/welcome-online.conf
@@ -4,7 +4,7 @@ showKnownIssuesUrl:     false
 showReleaseNotesUrl:    false
 
 requirements:
-    requiredStorage:    6.5
+    requiredStorage:    7.5
     requiredRam:        1.0
     internetCheckUrl:   http://google.com
 
@@ -25,7 +25,7 @@ requirements:
     # If any of these conditions are not met, the user cannot
     # continue past the welcome page.
     required:
-        # - storage
+        - storage
         - ram
         # - root
         - internet
