--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -3,10 +3,10 @@
 ---
 modules-search: [ local ]
 
-# instances:
-# - id:       default
-#   module:   shellprocess
-#   config:   shellprocess_default.conf
+instances:
+- id:       mkinitcpio
+  module:   shellprocess
+  config:   shellprocess_mkinitcpio.conf
 
 sequence:
 - show:
