--- a/settings-online.conf
+++ b/settings-online.conf
@@ -3,7 +3,10 @@
 ---
 modules-search: [ local ]
 
-# instances:
+instances:
+- id:       mkinitcpio
+  module:   shellprocess
+  config:   shellprocess_mkinitcpio.conf
 # - id:       kernel
 #   module:   netinstall
 #   config:   netinstall-kernel.conf
