--- a/settings-offline.conf
+++ b/settings-offline.conf
@@ -7,6 +7,9 @@ instances:
 - id:       mkinitcpio
   module:   shellprocess
   config:   shellprocess_mkinitcpio.conf
+- id:       preuser
+  module:   shellprocess
+  config:   shellprocess_preuser.conf
 
 sequence:
 - show:
@@ -33,6 +36,7 @@ sequence:
   - initcpio
   - packages
   - removeuser
+  - shellprocess@preuser
   - users
   - hwclock
   # - services-systemd
