--- a/settings-online.conf
+++ b/settings-online.conf
@@ -7,6 +7,9 @@ instances:
 - id:       mkinitcpio
   module:   shellprocess
   config:   shellprocess_mkinitcpio.conf
+- id:       preuser
+  module:   shellprocess
+  config:   shellprocess_preuser.conf
 # - id:       kernel
 #   module:   netinstall
 #   config:   netinstall-kernel.conf
@@ -46,6 +49,7 @@ sequence:
   - initcpio
   - packages
   - removeuser
+  - shellprocess@preuser
   - users
   - hwclock
   # - services-systemd
