--- a/settings-online.conf
+++ b/settings-online.conf
@@ -35,7 +35,8 @@ sequence:
 - exec:
   - partition
   - mount
-  - unpackfs
+  # - unpackfs
+  - baseinstall
   - machineid
   - fstab
   - locale
@@ -44,16 +45,16 @@ sequence:
   - networkcfg
   - luksopenswaphookcfg
   - luksbootkeyfile
-  - shellprocess@mkinitcpio
+  # - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
   - packages
   - removeuser
-  - shellprocess@preuser
+  # - shellprocess@preuser
   - users
   - hwclock
   # - services-systemd
-  - shellprocess
+  # - shellprocess
   - displaymanager
   - grubcfg
   - bootloader
