--- a/settings-online.conf
+++ b/settings-online.conf
@@ -10,6 +10,9 @@ instances:
 - id:       preuser
   module:   shellprocess
   config:   shellprocess_preuser.conf
+- id:       settings
+  module:   shellprocess
+  config:   shellprocess_settings.conf
 # - id:       kernel
 #   module:   netinstall
 #   config:   netinstall-kernel.conf
@@ -48,6 +51,7 @@ sequence:
   # - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
+  - shellprocess@settings
   - packages
   - removeuser
   # - shellprocess@preuser
