--- a/src/modules/packages/packages-online.conf
+++ b/src/modules/packages/packages-online.conf
@@ -1,12 +1,12 @@
 ---
 backend: pacman
 skip_if_no_internet: false
-update_db: true
+update_db: false
 update_system: false
 
 operations:
   - try_remove:
     - calamares-net
-    - ctlos-xfce-skel
+  #   - ctlos-xfce-skel
   # - install:
   #   - intel-ucode
