--- a/settings-online.conf
+++ b/settings-online.conf
@@ -10,6 +10,9 @@ instances:
 - id:       preuser
   module:   shellprocess
   config:   shellprocess_preuser.conf
+- id:       settings
+  module:   shellprocess
+  config:   shellprocess_settings.conf
 # - id:       kernel
 #   module:   netinstall
 #   config:   netinstall-kernel.conf
@@ -35,7 +38,8 @@ sequence:
 - exec:
   - partition
   - mount
-  - unpackfs
+  # - unpackfs
+  - baseinstall
   - machineid
   - fstab
   - locale
@@ -44,16 +48,17 @@ sequence:
   - networkcfg
   - luksopenswaphookcfg
   - luksbootkeyfile
-  - shellprocess@mkinitcpio
+  # - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
+  - shellprocess@settings
   - packages
   - removeuser
-  - shellprocess@preuser
+  # - shellprocess@preuser
   - users
   - hwclock
   # - services-systemd
-  - shellprocess
+  # - shellprocess
   - displaymanager
   - grubcfg
   - bootloader
