--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,10 +1,9 @@
 # Ctlos Calamares
-pkgname=calamares-net
-pkgver=3.2.30
-pkgrel=4
+pkgname=calamares-dev
+pkgver=3.2.32.1
+pkgrel=5
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
-license=(GPL)
 url="https://github.com/ctlos/calamares"
 license=('LGPL')
 
