--- a/settings-online.conf
+++ b/settings-online.conf
@@ -10,9 +10,6 @@ instances:
 - id:       preuser
   module:   shellprocess
   config:   shellprocess_preuser.conf
-- id:       settings
-  module:   shellprocess
-  config:   shellprocess_settings.conf
 # - id:       kernel
 #   module:   netinstall
 #   config:   netinstall-kernel.conf
@@ -38,8 +35,7 @@ sequence:
 - exec:
   - partition
   - mount
-  # - unpackfs
-  - baseinstall
+  - unpackfs
   - machineid
   - fstab
   - locale
@@ -48,17 +44,16 @@ sequence:
   - networkcfg
   - luksopenswaphookcfg
   - luksbootkeyfile
-  # - shellprocess@mkinitcpio
+  - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
-  - shellprocess@settings
   - packages
   - removeuser
-  # - shellprocess@preuser
+  - shellprocess@preuser
   - users
   - hwclock
   # - services-systemd
-  # - shellprocess
+  - shellprocess
   - displaymanager
   - grubcfg
   - bootloader
