--- a/src/modules/shellprocess/shellprocess_mkinitcpio.conf
+++ b/src/modules/shellprocess/shellprocess_mkinitcpio.conf
@@ -2,6 +2,6 @@
 dontChroot: false
 timeout: 10
 script:
-    - "-cp -r @@ROOT@@/etc/mkinitcpio.d/ctlos.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+    - "-mv -f @@ROOT@@/etc/mkinitcpio.d/ctlos.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
     - "-cp -r @@ROOT@@/etc/ctlos-mkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
     - "-su @@USER@@ -c 'xdg-user-dirs-gtk-update --force'"
