--- a/src/modules/packages/packages-online.conf
+++ b/src/modules/packages/packages-online.conf
@@ -6,7 +6,8 @@ update_system: false
 
 operations:
   - try_remove:
-    - calamares-net
+    - calamares-dev
+    - kio
   #   - ctlos-xfce-skel
   # - install:
   #   - intel-ucode
