--- a/src/modules/packages/packages-offline.conf
+++ b/src/modules/packages/packages-offline.conf
@@ -6,6 +6,7 @@ update_system: false
 
 operations:
   - try_remove:
-    - calamares-net
+    - calamares-dev
+    - kio
   # - install:
   #   - intel-ucode
