--- a/src/modules/shellprocess/shellprocess_mkinitcpio.conf
+++ b/src/modules/shellprocess/shellprocess_mkinitcpio.conf
@@ -3,4 +3,4 @@ dontChroot: false
 timeout: 10
 script:
     - "-mv -f @@ROOT@@/etc/mkinitcpio.d/ctlos.bak @@ROOT@@/etc/mkinitcpio.d/linux.preset"
-    - "-cp -r @@ROOT@@/etc/ctlos-mkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
+    # - "-cp -r @@ROOT@@/etc/ctlos-mkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
