--- a/src/modules/shellprocess/shellprocess_mkinitcpio.conf
+++ b/src/modules/shellprocess/shellprocess_mkinitcpio.conf
@@ -2,5 +2,5 @@
 dontChroot: false
 timeout: 10
 script:
-    - "-mv -f @@ROOT@@/etc/mkinitcpio.d/ctlos.bak @@ROOT@@/etc/mkinitcpio.d/linux.preset"
+    - "-mv -f @@ROOT@@/etc/mkinitcpio.d/ctlos.preset @@ROOT@@/etc/mkinitcpio.d/linux.preset"
     # - "-cp -r @@ROOT@@/etc/ctlos-mkinitcpio.conf @@ROOT@@/etc/mkinitcpio.conf"
