--- a/src/modules/netinstall/netinstall.yaml
+++ b/src/modules/netinstall/netinstall.yaml
@@ -296,6 +296,7 @@
       - ttf-roboto
       - ttf-ubuntu-font-family
       - terminus-font
+      - powerline-fonts
   - name: "Dev Tools"
     description: "Development"
     critical: false
