--- a/src/modules/netinstall/netinstall.yaml
+++ b/src/modules/netinstall/netinstall.yaml
@@ -245,6 +245,7 @@
       - qbittorrent
       - transmission-gtk
       - ktorrent
+      - torrserver-bin
       - wireshark-qt
   - name: "Terminals"
     description: "Terminals"
