--- a/src/modules/packages/packages-online.conf
+++ b/src/modules/packages/packages-online.conf
@@ -2,7 +2,7 @@
 backend: pacman
 skip_if_no_internet: false
 update_db: true
-update_system: false
+update_system: true
 
 operations:
   - try_remove:
