--- a/settings.conf
+++ b/settings.conf
@@ -38,8 +38,6 @@ sequence:
   - removeuser
   - users
   - hwclock
-  # - services-systemd
-  # - shellprocess@default
   - shellprocess
   - displaymanager
   - grubcfg
@@ -48,7 +46,7 @@ sequence:
 - show:
   - finished
 
-branding: ctlos
+branding: rach
 prompt-install: false
 dont-chroot: false
 oem-setup: false
