--- a/src/modules/packages/packages.conf
+++ b/src/modules/packages/packages.conf
@@ -6,7 +6,5 @@ update_system: false
 
 operations:
   - try_remove:
-    - calamares
+    - calamares-rach
     - kio
-  # - install:
-  #   - intel-ucode
