--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -2,7 +2,7 @@
 dontChroot: false
 timeout: 60
 script:
-    - "-/usr/bin/cleaner.sh"
+    - "-/usr/local/bin/cleaner.sh"
     # - "-touch @@ROOT@@/tmp/thingy"
     # - "/usr/bin/false"
     # - command: "/usr/local/bin/slowloris"
