--- a/settings-online.conf
+++ b/settings-online.conf
@@ -7,6 +7,9 @@ instances:
 - id:       mkinitcpio
   module:   shellprocess
   config:   shellprocess_mkinitcpio.conf
+- id:       reflector
+  module:   shellprocess
+  config:   shellprocess_reflector.conf
 - id:       preuser
   module:   shellprocess
   config:   shellprocess_preuser.conf
@@ -35,6 +38,7 @@ sequence:
   - shellprocess@mkinitcpio
   - initcpiocfg
   - initcpio
+  - shellprocess@reflector
   - packages
   - removeuser
   - shellprocess@preuser
